--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -22,7 +22,7 @@
   },
   "ProjectTable": {
     "title": "قائمة المنتجات",
-    "subTitle": " المشاريع المدريجة من خلال موضفين القسم"
+    "subTitle": " المشاريع المدرجة من خلال موضفين القسم"
   },
   "ProjectListReceive": {
     "title": "قائمة المشاريع المستلمة ",
