--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,7 @@
       "ProjectNotes": " Product Notes",
       "date": "Sending Date",
       "sender": "Sender ",
-      "SenderPhone": "Sender Pone",
+      "SenderPhone": "Sender Phone",
       "Action": "Action"
     }
   },
