--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -142,5 +142,6 @@
     "TechnicalDepartments":"Technical Departments",
     "HumanResource":"Human Resource"
 
-  }
+  },
+  "Authorized":"Unauthorized"
 }
