correct som event

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -61,7 +61,7 @@
     "Action": "اجراء"
   },
   "ProjectTable": {
-    "title": "قائمة المنتجات",
+    "title": "قائمة المشاريع",
     "subTitle": " المشاريع المدرجة من خلال موظفين القسم"
   },
   "ProjectListReceive": {
