--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -188,5 +188,6 @@
     "phone": "رقم الهاتف",
     "CareerTitle": "العنوان الوظيفي",
     "Department": "تحديد الاقسام"
-  }
+  },
+  "NoDataFound": "لاتوجد بيانات في هاذه الصفحة"
 }
